[package]
name = "gtk_test"
version = "0.1.0"
authors = ["Petr Volf <petr.volf216@gmail.com>"]
edition = "2018"
build = "build.rs"
links = "GL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = {version = "0.7.0", default-features = false, features = ["v3_16"]}
gdk-sys = "0.9.0"

[build-dependencies]
cc = "1.0"